# malloc

./: .gitignore  CMakeLists.txt  Makefile  malloc.c  malloc_tp.h
my_libc/: Makefile  README.md
my_libc/include/: my_malloc.h
my_libc/src/: blocks.c  free.c  malloc.c  realloc.c
src/: calloc.c  free.c  insert_blk.c  malloc.c  management_block.c  optimize_malloc.c  realloc.c  show_alloc_mem.c
src/include/: malloc.h
src_alexis/: calloc.c  free.c  malloc.c  management_block.c  realloc.c  show_alloc_mem.c
src_alexis/include/: malloc.h
test/: Makefile  malloc.c  malloc.h
